- added Id cvs tag and vim modeline
Changed files:
    apache-mod_fcgid.conf -> 1.2

--- a/apache-mod_fcgid.conf
+++ b/apache-mod_fcgid.conf
@@ -1,4 +1,6 @@
+# $Id$
 LoadModule fcgid_module modules/mod_fcgid.so
 
 SocketPath "/var/run/fcgid"
 IPCCommTimeout 60
+# vim: filetype=apache ts=4 sw=4 et
