- options should be conditional, the reason is simple, if for some reason the module fails to load, apache won't crash due to a unsupported configuration
Changed files:
    apache-mod_fcgid.conf -> 1.4

--- a/apache-mod_fcgid.conf
+++ b/apache-mod_fcgid.conf
@@ -1,6 +1,8 @@
 # $Id$
 LoadModule fcgid_module modules/mod_fcgid.so
 
+<IfModule mod_fcgid.c>
 FcgidIPCDir "/var/run/fcgid"
 FcgidIOTimeout 60
+</IfModule>
 # vim: filetype=apache ts=4 sw=4 et
